[package]
name = "TimeTracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#bindings = { path = "bindings" }

[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Web_Syndication",
    "Security_Credentials",
    "Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Foundation_Collections",
    "Win32_System_Diagnostics_ToolHelp",
]